# rock

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  config.h.in  doxygen.config
examples/: CMakeLists.txt  example_core.c  example_distribute.c  example_tensor.c
examples/data/: CMakeLists.txt  elem_example_core.hdf5  indx_example_core.hdf5
src/: common.h  core.c  core.h  disk.c  disk.h  distribute.c  distribute.h  error_codes.h  print.c  print.h  random.c  random.h  rock.h  sort.c  sort.h  tensor.c  tensor.h  version.h
tests/: CMakeLists.txt  test_core.c  test_disk.c  test_distribute.c  test_random.c  test_sort.c  valgrind.supp
tests/data/: CMakeLists.txt  indx_32bit_100x10x1000_50000_sample.hdf5  indx_32bit_100x10x1000_50000_sorted_102.hdf5  indx_32bit_32max_100000_sample.hdf5  indx_32bit_32max_100000_sorted_0.hdf5  indx_32bit_512x4x8x2_5000_sample.hdf5  indx_32bit_512x4x8x2_5000_sorted_3210.hdf5  perm_32bit_512x4x8x2_5000_sorted_3210.hdf5
